# QtAwesome

./: README.md
QtAwesome/: CMakeLists.txt
QtAwesome/src/: QtAwesome.cpp  QtAwesomeAnim.cpp
